--- a/Front-end/similaridade-ia/package.json
+++ b/Front-end/similaridade-ia/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
+    "react-toastify": "^9.1.1",
     "sort-by": "^1.2.0",
     "xlsx": "^0.18.5"
   },
